[gd_scene load_steps=12 format=3 uid="uid://b6n58govvhi1m"]

[ext_resource type="Script" path="res://scripts/droneRobot.gd" id="1_8l2iv"]
[ext_resource type="Texture2D" uid="uid://bygmlwbemds4x" path="res://assets/2d/shooterMinigame/healSprite.png" id="2_vo2pj"]
[ext_resource type="Texture2D" uid="uid://b2ydkf5njndxc" path="res://assets/2d/shooterMinigame/explosionSprite.png" id="3_7jd37"]
[ext_resource type="Texture2D" uid="uid://wec4s7kcrqwj" path="res://assets/2d/shooterMinigame/drone.png" id="4_gtvcr"]
[ext_resource type="AudioStream" uid="uid://dinyinb3glr0r" path="res://assets/audio/sfx/shooter/smallEnemyDie.mp3" id="5_48tr2"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_qafqr"]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_pljdi"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 26.34
gravity = Vector3(0, 0, 0)
attractor_interaction_enabled = false
scale_min = 4.0
scale_max = 4.0
anim_speed_min = 0.8
anim_speed_max = 1.2

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_72etv"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_d5gw2"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 26.34
gravity = Vector3(0, 0, 0)
attractor_interaction_enabled = false
scale_min = 4.0
scale_max = 4.0
anim_speed_min = 0.8
anim_speed_max = 1.2

[sub_resource type="CircleShape2D" id="CircleShape2D_ifrq4"]
radius = 26.0768

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u0i1b"]
size = Vector2(60, 56)

[node name="droneRobot" type="CharacterBody2D"]
z_index = 2
position = Vector2(1343, 283)
collision_layer = 64
collision_mask = 0
script = ExtResource("1_8l2iv")

[node name="healParticles" type="GPUParticles2D" parent="."]
texture_filter = 1
material = SubResource("CanvasItemMaterial_qafqr")
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_pljdi")
texture = ExtResource("2_vo2pj")
one_shot = true
speed_scale = 4.0
explosiveness = 1.0

[node name="explosionParticles" type="GPUParticles2D" parent="."]
texture_filter = 1
material = SubResource("CanvasItemMaterial_72etv")
position = Vector2(1, -1)
emitting = false
amount = 3
process_material = SubResource("ParticleProcessMaterial_d5gw2")
texture = ExtResource("3_7jd37")
one_shot = true
speed_scale = 4.0
explosiveness = 1.0

[node name="sprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(2, -4)
scale = Vector2(4, 4)
texture = ExtResource("4_gtvcr")

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_ifrq4")

[node name="bulletScanner" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="hitbox" type="CollisionShape2D" parent="bulletScanner"]
shape = SubResource("RectangleShape2D_u0i1b")

[node name="decayTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="die" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_48tr2")

[connection signal="area_entered" from="bulletScanner" to="." method="_on_bullet_scanner_area_entered"]
[connection signal="timeout" from="decayTimer" to="." method="_on_decay_timer_timeout"]
